Fix menu color on mobile

--- a/variables.scss
+++ b/variables.scss
@@ -628,7 +628,6 @@ $font-size-nav-menu-level1-mobile: 22.5px;
     font-size: 11px;
     line-height: 11px;
     letter-spacing: 1px;
-    color: $main-color-dark;
   }
 }
 .font-kpi-navigator-value {
@@ -744,23 +743,6 @@ $font-size-nav-menu-level1-mobile: 22.5px;
 .nav-menu-group {
   .nav-menuSelected {
     background-color: $nav-menuColor1;
-  }
-}
-
-
-.kpi-navigator-container {
-  .kpi-navigator {
-    background-color: $nav-menuColor1_2;
-  }
-  .kpi-navigator-unit.selected {
-    background-color: $nav-menuColor1;
-    @include respond-to(phone) {
-      background-color: transparent!important;
-    }
-
-    .kpi-navigator-title {
-      color: white;
-    }
   }
 }
 
